syntax = "proto3";

option csharp_namespace = "Generated";

message OperationResponse
{
	string message = 1;
}